# polygon-arbitrage-bot

./: README.md
polygon_arbitrage_bot/: .gitignore  Cargo.toml
polygon_arbitrage_bot/src/: config.rs  database.rs  lib.rs  main.rs
polygon_arbitrage_bot/src/modules/: arbitrage_detector.rs  mod.rs  price_fetcher.rs  profit_calculator.rs
