[package]
   name = "polygon_arbitrage_bot"
   version = "0.1.0"
   edition = "2021"

   [lints.rust]
   dead_code = "allow"
   unused_imports = "allow"

   [dependencies]
   tokio = { version = "1.0", features = ["full"] }
   reqwest = { version = "0.11", features = ["json"] }
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
   ethers = "2.0"
   anyhow = "1.0"
   clap = { version = "4.0", features = ["derive"] }
   dotenv = "0.15"
   sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
   chrono = { version = "0.4", features = ["serde"] }
   uuid = { version = "1.0", features = ["v4"] }